<resources>
    <string name="app_name">Property App</string>

    <string name="title_activity_property_detail">PropertyDetailActivity</string>

    <array name="type">
        <item>Select Type</item>
        <item>Apartments and Flats</item>
        <item>House</item>
        <item>Land and Plot</item>
        <item>Portion and floors</item>
        <item>Shops - Office - Commercial Space</item>
    </array>

    <array name="quantity">

        <item>Select</item>
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7+</item>
    </array>
    <array name="area_unit">

        <item>Square Area Unit</item>
        <item>Square Feet</item>
        <item>Square Yards</item>
        <item>Square Meters</item>
        <item>Marla</item>
        <item>Kanal</item>

    </array>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="facebook_app_id">924865484380055</string>
    <string name="fb_login_protocol_scheme">fb924865484380055</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="guest">Guest</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone_no">Phone No</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="location">Location</string>
    <string name="city">City</string>
    <string name="address">Address</string>
    <string name="category">Category</string>
    <string name="country">Country</string>
    <string name="contactno">Contact No:</string>
    <string name="add">Add</string>
    <string name="for_sale">For Sale</string>
    <string name="for_rent">For Rent</string>
    <string name="price">Price</string>
    <string name="type">Type</string>
    <string name="area_unit">Area Unit</string>
    <string name="area">Area</string>
    <string name="call">Call</string>
    <string name="sms">Sms</string>
    <string name="appwidget_text">Favourite Widget</string>
    <string name="add_widget">Add widget</string>

    <string name="no_adds_to_show">No adds to show</string>
    <string name="not_a_member_sign_up">Not a member? Sign Up</string>
    <string name="widget_no_favorite_found">No Favorites found</string>
    <string name="widget_price">$540,000</string>
    <string name="widget_description">181 Sloane Street Goulburn NSW 2580</string>
    <string name="widget_type">Type</string>
    <string name="widget_category">Category:</string>
    <string name="Splash">Splash</string>
    <string name="Male">MALE</string>
    <string name="Female">FEMALE</string>
    <string name="nav_home">Home</string>
    <string name="nav_add_property">Add Property</string>
    <string name="nav_my_ads">My Ads</string>
    <string name="nav_favorites">Favorites</string>
    <string name="nav_logout">Logout</string>
    <string name="search">Search</string>
    <string name="gender">Gender</string>

    <string name="cd_login">Login Screen Image</string>
    <string name="cd_profile_pic">this is a profile pic of user</string>
    <string name="cd_splash">This is a splash screen</string>
    <string name="cd_property_image">This is selected property image</string>
    <string name="cd_edit_property_image">This is selected property image or edit</string>
    <string name="cd_home">GO Home</string>

    <string name="code_edit">Edit</string>
    <string name="code_dollar">$</string>
    <string name="code_for_sale">For Sale</string>
    <string name="code_for_rent">For Rent</string>

    <string name="code_first_required">Title is required</string>
    <string name="code_last_required">Title is required</string>
    <string name="code_title_required">Title is required</string>
    <string name="code_description_required">Description is required</string>
    <string name="code_phone_required">Phone no is required</string>
    <string name="code_city_required">City is required</string>
    <string name="code_location_required">Location is required</string>
    <string name="code_address_required">Address is required</string>
    <string name="code_price_required">Price is required</string>
    <string name="code_area_required">Area is required</string>

    <string name="code_email_required">Email is required</string>
    <string name="code_invalid_email_required">Invalid email address</string>
    <string name="code_password_required">Password is required</string>
    <string name="code_confirm_password_required">Confirm Password is required</string>
    <string name="code_password_notmatched">Password does not match</string>

    <string name="toast_Please_click_BACK_again_to_exit">Please click BACK again to exit</string>
    <string name="toast_Please_login_from_user_account_to_add_property">Please login from user account to add property</string>
    <string name="toast_Cannot_connect_to_the_server">Cannot connect to the server</string>
    <string name="toast_Please_select_image">Please select image</string>
    <string name="toast_Property_Added_Successfully">Property Added Successfully</string>

</resources>
