<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".login.LoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="@dimen/big_margin"
                android:paddingRight="@dimen/big_margin">

                <ImageView
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/standard_margin"
                    android:src="@drawable/home" />

                <!-- Email Label -->
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/small_margin"
                    android:layout_marginTop="@dimen/small_margin"
                    android:textColorHint="@color/font_color_title"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/etEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress" />
                </android.support.design.widget.TextInputLayout>

                <!-- Password Label -->
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/small_margin"
                    android:layout_marginTop="@dimen/small_margin"
                    android:hint="@string/password"
                    android:textColorHint="@color/font_color_title"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/etPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword" />
                </android.support.design.widget.TextInputLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/btnLogin"
                        style="@style/ButtonStyle1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/standard_margin"
                        android:layout_weight="0.5"
                        android:padding="@dimen/small_margin"
                        android:text="@string/login" />

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/btnGuest"
                        style="@style/ButtonStyle4"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/standard_margin"
                        android:layout_weight="0.5"
                        android:padding="@dimen/small_margin"
                        android:text="@string/guest" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tvSignUp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/standard_margin"
                    android:gravity="center"
                    android:text="Not a member? Sign Up"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/ts_standard"
                    android:visibility="visible" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</RelativeLayout>